[tool.poetry]
name = "notebook-review-test"
version = "0.1.0"
description = ""
authors = ["Paweł Zawistowski <pawel.zawistowski@allegro.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
jupyter = "^1.0.0"
torch = "^1.11.0"
pandas = "^1.4.2"
scikit-learn="^1.0.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
